--- a/_meetings/2022-09-01-Geneva.md
+++ b/_meetings/2022-09-01-Geneva.md
@@ -34,7 +34,7 @@ Kristin Lauter (Facebook), Vinod Vaikuntanathan (MIT/Duality Technologies), Kim 
 
 ## Agenda
 
-| Day 1: 1 September 2022 (12:00 - 22:00) |                                                                                                                                                                                                                                                                       |
+Day 1: 1 September 2022 (12:00 - 22:00)                                                                                                                                                                                                                                                                       
 |------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | 12:00 - 13:00                            | Registration & Poster set-up                                                                                                                                                                                                                                         |
 | 13:00 - 13:15                            | Introduction & Welcome Remarks                                                                                                                                                                                                                                       |
