try to fix table

--- a/_meetings/2022-09-01-Geneva.md
+++ b/_meetings/2022-09-01-Geneva.md
@@ -35,25 +35,25 @@ Kristin Lauter (Facebook), Vinod Vaikuntanathan (MIT/Duality Technologies), Kim 
 ## Agenda
 
 Day 1: 1 September 2022 (12:00 - 22:00)
-|time                                      |Activity                                                                                                                                                                                                                                                                     
+|time                                      |Activity                                                                                                                                                                                                                                                               |                                                                                                                                                                                                                                                                     
 |------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| 12:00 - 13:00                            | Registration & Poster set-up                                                                                                                                                                                                                                         |
-| 13:00 - 13:15                            | Introduction & Welcome Remarks                                                                                                                                                                                                                                       |
-| 13:15 - 14:15                            | Software tools and libraries (I)Junbum Shin, CryptoLab: "HEaaN: Encrypted Computation Library"​                                                                                                                                                                      |
+| 12:00 - 13:00                            | Registration & Poster set-up                                                                                                                                                                                                                                          |
+| 13:00 - 13:15                            | Introduction & Welcome Remarks                                                                                                                                                                                                                                        |
+| 13:15 - 14:15                            | Software tools and libraries (I)Junbum Shin, CryptoLab: "HEaaN: Encrypted Computation Library"​                                                                                                                                                                        |
 |                                          | Damien Ligier & Ilaria Chillotti, Zama: "An overview of the Concrete Framework" [Presentation]                                                                                                                                                                        |
 |                                          | Shruthi Gorantala, Google Inc.: "FHE Transpiler by Google" [Presentation]                                                                                                                                                                                             |
-| 14:15 - 14:30                            | Coffee Break                                                                                                                                                                                                                                                         |
-| 14:30 - 15:50                            | Software tools and libraries (II) Martin Zuber, CEA: "HE libraries and software tools"                                                                                                                                                                             |
+| 14:15 - 14:30                            | Coffee Break                                                                                                                                                                                                                                                          |
+| 14:30 - 15:50                            | Software tools and libraries (II) Martin Zuber, CEA: "HE libraries and software tools"                                                                                                                                                                                |
 |                                          | Yuriy Polyakov, Duality: "OpenFHE library" [Presentation]                                                                                                                                                                                                             |
-|                                          | Mariya Georgieva, Inpher: "GenoPPML framework for an end-to-end privacy-preserving genomics ML"                                                                                                                                                                      |
+|                                          | Mariya Georgieva, Inpher: "GenoPPML framework for an end-to-end privacy-preserving genomics ML"                                                                                                                                                                       |
 |                                          | Jean-Philippe Bossuat & Juan R. Troncoso-Pastoriza, Tune Insight: "Tune Insight’s distributed analytics platform and the Lattigo library"                                                                                                                             |
-| 15:50 - 16:05                            | Coffee Break                                                                                                                                                                                                                                                        |
-| 16:05 - 16:35                            | HEBench – A framework for benchmarking HE workloads                                                                                                                                                                                                                  |
-|                                          | Flavio Bergamaschi & Ernesto Zamora Ramos, Intel: "The Homomorphic Encryption Benchmarking Community" [Presentation]                                                                                                                                                |
-| 16:35 - 17:05                            | Upcoming competitions in HEXiaoqian Jiang, Arif O.Harmanci, UTHealth, Miran Kim, Hanyang University: "iDash: A community’s effort to benchmark and accelerate the development of homomorphic encryption solutions to protect biomedical data sharing and analysis" |
+| 15:50 - 16:05                            | Coffee Break                                                                                                                                                                                                                                                          |
+| 16:05 - 16:35                            | HEBench – A framework for benchmarking HE workloads                                                                                                                                                                                                                   |
+|                                          | Flavio Bergamaschi & Ernesto Zamora Ramos, Intel: "The Homomorphic Encryption Benchmarking Community" [Presentation]                                                                                                                                                  |
+| 16:35 - 17:05                            | Upcoming competitions in HEXiaoqian Jiang, Arif O.Harmanci, UTHealth, Miran Kim, Hanyang University: "iDash: A community’s effort to benchmark and accelerate the development of homomorphic encryption solutions to protect biomedical data sharing and analysis"    |
 |                                          | Pascal Paillier, Zama: "FHE.org challenge" [Presentation]                                                                                                                                                                                                             |
-| 17:05 - 17:20                            | HE Demos & Posters Lightning Talks                                                                                                                                                                                                                                  |
-| 17:20 - 18:30                            | Demo/Poster & Networking Session                                                                                                                                                                                                                                     |
-| 19:30 - 22:00                            | Welcome Dinner & Networking                                                                                                                                                                                                                                         |
+| 17:05 - 17:20                            | HE Demos & Posters Lightning Talks                                                                                                                                                                                                                                    |
+| 17:20 - 18:30                            | Demo/Poster & Networking Session                                                                                                                                                                                                                                      |
+| 19:30 - 22:00                            | Welcome Dinner & Networking                                                                                                                                                                                                                                           |
 
 
