--- a/_meetings/2022-09-01-Geneva.md
+++ b/_meetings/2022-09-01-Geneva.md
@@ -38,23 +38,58 @@ Day 1: 1 September 2022 (12:00 - 22:00)
 
 | time                                     | Activity                                                                                                                                                                                                                                                              |                                                                                                                                                                                                                                                                     
 |------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| 12:00 - 13:00                            | Registration & Poster set-up                                                                                                                                                                                                                                          |
-| 13:00 - 13:15                            | Introduction & Welcome Remarks                                                                                                                                                                                                                                        |
-| 13:15 - 14:15                            | Software tools and libraries (I)Junbum Shin, CryptoLab: "HEaaN: Encrypted Computation Library"​                                                                                                                                                                        |
-|                                          | Damien Ligier & Ilaria Chillotti, Zama: "An overview of the Concrete Framework" [Presentation]                                                                                                                                                                        |
-|                                          | Shruthi Gorantala, Google Inc.: "FHE Transpiler by Google" [Presentation]                                                                                                                                                                                             |
-| 14:15 - 14:30                            | Coffee Break                                                                                                                                                                                                                                                          |
-| 14:30 - 15:50                            | Software tools and libraries (II) Martin Zuber, CEA: "HE libraries and software tools"                                                                                                                                                                                |
-|                                          | Yuriy Polyakov, Duality: "OpenFHE library" [Presentation]                                                                                                                                                                                                             |
-|                                          | Mariya Georgieva, Inpher: "GenoPPML framework for an end-to-end privacy-preserving genomics ML"                                                                                                                                                                       |
-|                                          | Jean-Philippe Bossuat & Juan R. Troncoso-Pastoriza, Tune Insight: "Tune Insight’s distributed analytics platform and the Lattigo library"                                                                                                                             |
-| 15:50 - 16:05                            | Coffee Break                                                                                                                                                                                                                                                          |
-| 16:05 - 16:35                            | HEBench – A framework for benchmarking HE workloads                                                                                                                                                                                                                   |
-|                                          | Flavio Bergamaschi & Ernesto Zamora Ramos, Intel: "The Homomorphic Encryption Benchmarking Community" [Presentation]                                                                                                                                                  |
-| 16:35 - 17:05                            | Upcoming competitions in HEXiaoqian Jiang, Arif O.Harmanci, UTHealth, Miran Kim, Hanyang University: "iDash: A community’s effort to benchmark and accelerate the development of homomorphic encryption solutions to protect biomedical data sharing and analysis"    |
-|                                          | Pascal Paillier, Zama: "FHE.org challenge" [Presentation]                                                                                                                                                                                                             |
-| 17:05 - 17:20                            | HE Demos & Posters Lightning Talks                                                                                                                                                                                                                                    |
-| 17:20 - 18:30                            | Demo/Poster & Networking Session                                                                                                                                                                                                                                      |
-| 19:30 - 22:00                            | Welcome Dinner & Networking                                                                                                                                                                                                                                           |
+| 12:00-13:00                            | Registration & Poster set-up                                                                                                                                                                                                                                          |
+| 13:00-13:15                            | Introduction & Welcome Remarks                                                                                                                                                                                                                                        |
+| 13:15-14:15                            | Software tools and libraries (I)Junbum Shin, CryptoLab: "HEaaN: Encrypted Computation Library"​                                                                                                                                                                        |
+|                                        | Damien Ligier & Ilaria Chillotti, Zama: "An overview of the Concrete Framework" [Presentation]                                                                                                                                                                        |
+|                                        | Shruthi Gorantala, Google Inc.: "FHE Transpiler by Google" [Presentation]                                                                                                                                                                                             |
+| 14:15-14:30                            | Coffee Break                                                                                                                                                                                                                                                          |
+| 14:30-15:50                            | Software tools and libraries (II) Martin Zuber, CEA: "HE libraries and software tools"                                                                                                                                                                                |
+|                                        | Yuriy Polyakov, Duality: "OpenFHE library" [Presentation]                                                                                                                                                                                                             |
+|                                        | Mariya Georgieva, Inpher: "GenoPPML framework for an end-to-end privacy-preserving genomics ML"                                                                                                                                                                       |
+|                                        | Jean-Philippe Bossuat & Juan R. Troncoso-Pastoriza, Tune Insight: "Tune Insight’s distributed analytics platform and the Lattigo library"                                                                                                                             |
+| 15:50-16:05                            | Coffee Break                                                                                                                                                                                                                                                          |
+| 16:05-16:35                            | HEBench – A framework for benchmarking HE workloads                                                                                                                                                                                                                   |
+|                                        | Flavio Bergamaschi & Ernesto Zamora Ramos, Intel: "The Homomorphic Encryption Benchmarking Community" [Presentation]                                                                                                                                                  |
+| 16:35-17:05                            | Upcoming competitions in HEXiaoqian Jiang, Arif O.Harmanci, UTHealth, Miran Kim, Hanyang University: "iDash: A community’s effort to benchmark and accelerate the development of homomorphic encryption solutions to protect biomedical data sharing and analysis"    |
+|                                        | Pascal Paillier, Zama: "FHE.org challenge" [Presentation]                                                                                                                                                                                                             |
+| 17:05-17:20                            | HE Demos & Posters Lightning Talks                                                                                                                                                                                                                                    |
+| 17:20-18:30                            | Demo/Poster & Networking Session                                                                                                                                                                                                                                      |
+| 19:30-22:00                            | Welcome Dinner & Networking                                                                                                                                                                                                                                           |
+
+Day 2: September 2nd (08:00 - 18:00)
+
+| time        | Acitivity                                                                                                                 |
+|-------------|---------------------------------------------------------------------------------------------------------------------------|
+| 08:00-09:00 | Registration and networking breakfast                                                                                     |
+| 09:00-09:15 | Intro and welcome                                                                                                         |
+| 09:15-10:15 | "Keynote talk                                                                                                             |
+|             | The past, present and future of FHE. Zvika Brakerski (Weizmann Institute of Science)"                                     |
+| 10:15-11:15 | "Hardware computing platforms and acceleration for HE (I)                                                                 |
+|             | – Hardware Acceleration of FHE. Pradip Bose, Omri Soceanu, Nir Drucker, John Buselli (IBM)                                |                                                   |
+|             | – Accelerating FHE with Silicon Photonics. Florent Michel (Optalysys)                                                     |
+|             | – Full circuit FHE acceleration on Cornami HW. Vineet Chadha (Cornami)"                                                   |
+| 11:15-11:45 | Coffee break / posters / networking                                                                                       |
+| 11:45-12:50 | "Hardware computing platforms and acceleration for HE (II)                                                                |
+|             | – DPRIVE: The rise of novel computing platforms for FHE. Rosario Cammarota (Intel), Kurt Rohloff (Duality)                |
+|             | – Hardware acceleration for FHE. Ingrid Verbauwhede (KULeuven)                                                            |
+|             | – GPU acceleration of HE. Erkay Savas (Sabanchi University)"                                                              |
+| 12:50-13:45 | Lunch                                                                                                                     |
+| 13:45-14:45 | "Industry applications and use cases                                                                                      |
+|             | – PETs applications in Asia Pacific. Tim Scott (Deloitte Australia)                                                       |
+|             | – Contributions and Case Studies from the UN Privacy-Enhancing Technologies Task Team. Raphaël de Fondeville (UN PET Lab) |
+|             | – The use of PETs for data aggregation. Jihoon Cho, Kyoohyung Han (Samsung)"                                              |
+| 14:45-15:45 | "Liaisons to standards communities                                                                                        |
+|             | – ISO Updates on the development of ISO/IEC JCT1 18033 – Part 8, FHE. Rosario Cammarota (Intel)                           |
+|             | – Toward recommendations for advanced cryptography. Luís Brandão (NIST/Strativia)"                                        |
+| 15:45-16:05 | Coffee Break / posters / networking                                                                                       |
+| 16:05-17:05 | "Security and precision of FHE                                                                                            |
+|             | – Updates on FHE Security standardisation efforts. Rachel Player (RHUL)                                                   |
+|             | – Security on FHE. Nicolas Gama (SandboxAQ)                                                                               |
+|             | – On the precision loss in approximate encryption. Anamaria Costache (NTNU)"                                              |
+| 17:05-17:35 | Status updates of the HE.org standards community                                                                          |
+| 17:35-17:45 | Conclusions and next steps                                                                                                |
+| 17:45-18:00 | Sneak peek of the next meeting                                                                                            |
+| 18:00       | Farewell                                                                                                                  |
 
 
