fix header day 2

--- a/_meetings/2022-09-01-Geneva.md
+++ b/_meetings/2022-09-01-Geneva.md
@@ -57,7 +57,7 @@ Day 1: 1 September 2022 (12:00 - 22:00)
 | 17:20-18:30                            | Demo/Poster & Networking Session                                                                                                                                                                                                                                      |
 | 19:30-22:00                            | Welcome Dinner & Networking                                                                                                                                                                                                                                           |
 
-Day 2: September 2nd (08:00 - 18:00)
+Day 2: 2 September (08:00 - 18:00)
 
 | time        | Acitivity                                                                                                                 |
 |-------------|---------------------------------------------------------------------------------------------------------------------------|
