--- a/_meetings/2022-09-01-Geneva.md
+++ b/_meetings/2022-09-01-Geneva.md
@@ -92,4 +92,30 @@ Day 2: 2 September (08:00 - 18:00)
 | 17:45-18:00   | Sneak peek of the next meeting                                                                                            |
 | 18:00         | Farewell                                                                                                                  |
 
+## List of accepted posters
+
+The accepted posters that will be presented during the poster session and coffee breaks are listed below:
+
+1. Affordable and Practical Acceleration of CKKS-based Fully Homomorphic Encryption.
+Rashmi Agrawal, Leo de Castro, Rabia Yazicigil, Anantha Chandrakasan, Vinod Vaikuntanathan, Chiraag Juvekar, Ajay Joshi
+2 .Field Instruction Multiple Data.
+Khin Mi Mi Aung, Enhui Lim, Jun Jie Sim, Benjamin Hong Meng Tan, Huaxiong Wang, Sze Ling Yeo
+3. MOSFHET: Optimized Software for FHE over the Torus.
+Antonio Guimarães, Edson Borin, and Diego F. Aranha
+4. OpenFHE: Open-Source Fully Homomorphic Encryption Library.
+Ahmad Al Badawi and Jack Bates and Flavio Bergamaschi and David Bruce Cousins and Saroja Erabelli and Nicholas Genise and Shai Halevi and Hamish Hunt and Andrey Kim and Yongwoo Lee and Zeyu Liu and Daniele Micciancio and Ian Quah and Yuriy Polyakov and Saraswathy R.V. and Kurt Rohloff and Jonathan Saylor and Dmitriy Suponitsky and Matthew Triplett and Vinod Vaikuntanathan and Vincent Zucca
+5. Multi-Key Homomorphic Encryption for Collaborative Camera Attribution.
+Alberto Pedrouzo-Ulloa, Fernando Pérez-González, David Vázquez-Padín
+6. PIE: p-adic Encoding for High-Precision Arithmetic using Homomorphic Encryption.
+Gaetan Delavignette, Luke Harmon, Arnab Roy, David Silva
+7. Practical Integrity Protection for FHE.
+Christian Knabenhans, Alexander Viand, Anwar Hithnawi
+8. The Lattigo library: Multiparty Homomorphic Encryption in Go.
+Jean-Philippe Bossuat, Christian Mouchet, Juan R. Troncoso-Pastoriza
+9. Secure Collaborative Design of Experiments with Homomorphic Encryption.
+Jin Chao, Khin Mi Mi Aung, Zhang Xin
+10. An FHE-based framework to help Catalan Social Entities.
+Sergi Rovira, Vanesa Daza
+11. HECO: Automatic Code Optimizations for Efficient Fully Homomorphic Encryption.
+Alexander Viand, Patrick Jattke, Miro Haller, Anwar Hithnawi
 
