--- a/_meetings/2022-09-01-Geneva.md
+++ b/_meetings/2022-09-01-Geneva.md
@@ -119,3 +119,48 @@ Sergi Rovira, Vanesa Daza
 11. HECO: Automatic Code Optimizations for Efficient Fully Homomorphic Encryption.
 Alexander Viand, Patrick Jattke, Miro Haller, Anwar Hithnawi
 
+## Logistics and accommodation
+
+ITU is located at the Places des Nations (Square of Nations), which is a stop on many bus lines and the main tramline 15. 
+The recommended hotels that are close to ITU or close to a stop on the tramline 15 (or a direct bus to Place des nations) are:
+
+- Intercontinental Geneve, 7-9, Chemin du Petit-Saconnex, 1211 Genève
+- Warwick Geneva, Rue de Lausanne 14, 1201 Genève
+- Hotel Ibis Genève Centre Lac, Rue de Berne 26, 1201 Genève
+- Hotel Ibis Geneve Centre Nations, Rue du Grand-Pré 33-35, 1201 Genève
+- Hotel Novotel Geneve Centre, Rue de Zurich 19, 1201 Genève
+- Hotel Cornavin, Boulevard James-Fazy 23, 1201 Genève
+
+Notable lakeside hotels (with less direct public transport connections) are:
+
+- President Wilson Hotel, Quai Wilson 47, 1211 Genève
+- Grand Hotel Kempinski, Quai du Mont-Blanc 19, 1201 Genève
+- Four Seasons Hotel des Bergues, Quai des Bergues 33, 1201 Genève
+- Mandarin Oriental, Quai Turrettini 1, 1201 Genève
+
+Geneva is a very compact city (<200K inhabitants), with a very high quality public transportation system, trams run about every 3 minutes during commuting hours.
+
+Upon arrival at the Geneva airport, in the baggage hall, there next to the exit point there are machines that give out free public transport tickets. 
+These machines give out tickets that are valid on all public transport in Geneva for 80 minutes (trams, buses, trains, boats).
+
+The easiest way to get to Geneva city from the airport to the city is using the trains that depart from the airport. 
+All trains go via Geneva main station, which is the first stop, called Genève-Cornavin (~7 minutes).
+
+## Contact
+If you have any questions, please contact the organizing committee at hes2020@homomorphicencryption.org 
+or the HomomorphicEncryption.org steering committee at contact@homomorphicencryption.org. 
+As this will be an interactive workshop, we will try to have opportunities for participants to share information that is relevant and appropriate to the goal of approving a standard for parameter selection for homomorphic encryption. 
+Please send us an email if you have something you would like to propose to present at the workshop.
+
+## Sponsorship
+This meeting is proudly sponsored by:
+
+- HEAAN Cryptolab
+- inpher
+- Sandbox AQ
+- Tune Insight
+- Zama
+- ITU
+
+
+
