add more info MIT

--- a/_meetings/2017-07-13-Redmond.md
+++ b/_meetings/2017-07-13-Redmond.md
@@ -3,81 +3,79 @@ title: "[1] Redmond"
 date: 2017-07-13T15:14:54+02:00
 ---
 
-Redmond, WA
+The first meeting was held on 13 July 2017 at Microsoft Research.
 
-![Accounting Services](/images/austin-distel-nGc5RT2HmF0-unsplash.jpg)
+This workshop brought together members of the Homomorphic Encryption (HE) community to spend two days working together toward a plan for standardization.
 
-# Objectives
+Homomorphic encryption schemes which can handle one “operation” have been known for a long time, such as RSA, Paillier, or BGN which can do a little bit more. With the breakthrough work by Gentry in 2009, the community embarked on a new direction, basing “Fully” Homomorphic Encryption Schemes on hard lattice problems. Now, 8 years later, we have multiple robust HE libraries available (HElib, SEAL, NFLlib, Palisade), which use schemes such as BGV and FV. With new optimizations and clever encoding techniques, they allow an amazing amount of practical computation to be done on encrypted data. Projects such as CryptoNets have already proved the feasibility of machine learning applications on encrypted data; the iDASH 2015 and 2016 competitions demonstrated computations on encrypted genomic data such as edit distance and string matching. Most applications follow the “leveled” approach, where parameters are set to allow the evaluation of limited—but arbitrarily high – depth circuits, making the computations practical, and avoiding costly bootstrapping operations. For that reason, we drop the word “Fully”, and simply refer to the area as Homomorphic Encryption (HE).
 
-Financial accounting and financial reporting are often used as synonyms.
+This workshop aimed to leverage this progress and to galvanize the community toward a common approach to standardization of Homomorphic Encryption.
 
-1. According to International Financial Reporting Standards: the objective of financial reporting is:
-2. To provide financial information that is useful to existing and potential investors, lenders and other creditors in making decisions about providing resources to the reporting entity.
-3. According to the European Accounting Association:
+## Organizers
+- Kristin Lauter, Microsoft Research
+- Kim Laine, Microsoft Research
+- Kurt Rohloff, New Jersey Institute of Technology
+- Lily Chen, National Institute of Standards and Technology
+- Roy Zimmermann, Microsoft Research
 
-## Relevance
+## Attendees
 
-Relevance is the capacity of the financial information to influence the decision of its users. The ingredients of relevance are the predictive value and confirmatory value. Materiality is a sub-quality of relevance.
+### Microsoft
+- David Carroll, Microsoft Azure
+- Melissa Chase, Microsoft Research
+- Hao Chen, Microsoft Research
+- Ran Gilad-Bachrach, Microsoft Research
+- Ranjit Kumaresan, Microsoft Research
+- Kim Laine, Microsoft Research
+- Kristin Lauter, Microsoft Research
+- Satya Lokam, Microsoft Research India
+- Roy Zimmermann, Microsoft Research Outreach
 
-> The ingredients of relevance are the predictive value and confirmatory value.
+### Microsoft Interns
+- Kyoohyung Han, Seoul National University
+- Zhicong Huang, École Polytechnique Fédérale de Lausanne (EPFL)
+- Amir Jalali, Florida Atlantic University
+- Travis Morrison, Pennsylvania State University
 
-Information is considered material if its omission or misstatement could influence the economic decisions of users taken on the basis of the financial statements.
+## Government Agencies
+- Lily Chen, National Institute of Standards and Technology (NIST)
+- Roger Hallman, SPAWAR Systems Center Pacific
+- Dustin Moody, National Institute of Standards and Technology (NIST)
+- Heidi Sofia, National Institutes of Health (NIH)/National Human Genome Research Institute (NHGRI)
 
-## Faithful Representation
+## Industry
+- David Archer, Galois
+- Shai Halevi, IBM
+- Alex Malozemoff, Galois
+- Pascal Paillier, Crypto Experts
 
-Faithful representation means that the actual effects of the transactions shall be properly accounted for and reported in the financial statements. The words and numbers must match what really happened in the transaction. The ingredients of faithful representation are completeness, neutrality and free from error.
+## Academia
+- Brad Malin, Vanderbilt University-GenoPri
+- Michael Brenner, University of Hannover
+- Jung Hee Cheon, Seoul National University
+- Wei Dai, Worchester Polytechnic Institute
+- Jintai Ding, University of Cincinnati
+- Shafi Goldwasser, Massachusetts Institute of Technology
+- Sergey Gorbunov, University of Waterloo
+- Jeffrey Hoffstein, Brown University
+- Xiaoqian Jiang, University of California at San Diego-iDASH
+- Miran Kim, University of California at San Diego
+- Yuriy Polyakov, New Jersey Institute of Technology
+- Kurt Rohloff, New Jersey Institute of Technology
+- Amit Sahai, University of California at Los Angeles
+- Erkay Savas, Sabanci University
+- Yongsoo Song, Seoul National University
+- Berk Sunar, Worchester Polytechnic Institute
+- Vinod Vaikuntanathan, Massachusetts Institute of Technology
+- Shuang Wang, University of California at San Diego-iDASH
 
-## Enhancing Qualitative Characteristics
+## White Papers
+These white papers were drafted by three working groups at the workshop:
+- APIs: This white paper discusses the design of API standards for homomorphic encryption.
+- Security: This white paper discusses the security standards for homomorphic encryption.
+- Applications: This white paper discusses the motivating applications for homomorphic encryption.
 
-### Verifiability
+## In the News
+[To Protect Genetic Privacy, Encrypt your DNA](https://www.wired.com/story/to-protect-genetic-privacy-encrypt-your-dna/), Wired, August 23, 2017
+[Changing the security landscape for entrepreneurs](https://techcrunch.com/2017/08/17/changing-the-security-landscape-for-entrepreneurs/), TechCrunch, August 17, 2017
 
-Verifiability implies consensus between the different knowledgeable and independent users of financial information. Such information must be supported by sufficient evidence to follow the principle of objectivity.
-
-### Comparability
-
-Comparability is the uniform application of accounting methods across entities in the same industry. The principle of consistency is under comparability. Consistency is the uniform application of accounting across points in time within an entity.
-
-### Understandability
-
-Understandability means that accounting reports should be expressed as clearly as possible and should be understood by those to whom the information is relevant.
-Timeliness: Timeliness implies that financial information must be presented to the users before a decision is to be made.
-
----
-
-## Statement of cash flows
-
-The statement of cash flows considers the inputs and outputs in concrete cash within a stated period. The general template of a cash flow statement is as follows: Cash Inflow - Cash Outflow + Opening Balance = Closing Balance
-
-| Cash Inflow | Outflow   | Opening Balance |
-| ----------- | --------- | --------------- |
-| _Monday_    | `Tuesday` | **Wednesday**   |
-| 1           | 2         | 3               |
-
-**Example 1:** in the beginning of September, Ellen started out with $5 in her bank account. During that same month, Ellen borrowed $20 from Tom. At the end of the month, Ellen bought a pair of shoes for $7. Ellen's cash flow statement for the month of September looks like this:
-
-- Cash inflow: $20
-- Cash outflow:$7
-- Opening balance: $5
-- Closing balance: $20 – $7 + $5 = $18
-
-**Example 2:** in the beginning of June, WikiTables, a company that buys and resells tables, sold 2 tables. They'd originally bought the tables for $25 each, and sold them at a price of $50 per table. The first table was paid out in cash however the second one was bought in credit terms. WikiTables' cash flow statement for the month of June looks like this:
-
-> **Important:** the cash flow statement only considers the exchange of actual cash, and ignores what the person in question owes or is owed.
-
-## Statement of financial position (balance sheet)
-
-The balance sheet is the financial statement showing a firm's assets, liabilities and equity (capital) at a set point in time, usually the end of the fiscal year reported on the accompanying income statement.
-
-- **fixed assets**
-  - property
-  - building
-  - equipment (such as factory machinery)
-- **intangible assets**
-  - copyrights
-  - trademarks
-  - patents
-    - pending
-    - international
-- goodwill
-
-Owner's equity, sometimes referred to as net assets, is represented differently depending on the type of business ownership. Business ownership can be in the form of a sole proprietorship, partnership, or a corporation. For a corporation, the owner's equity portion usually shows common stock, and retained earnings (earnings kept in the company). Retained earnings come from the retained earnings statement, prepared prior to the balance sheet.
